src/styles/layout.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  -webkit-tap-highlight-color: transparent;
}

body {
  @apply subpixel-antialiased bg-red-50;
  margin: 0;
}

.milky-bg {
  background: rgba(255, 255, 255, 0.18);
  backdrop-filter: blur(1.5px);
}

.blurry {
  backdrop-filter: blur(10px);
}

.font-merriweather {
  font-family: 'Merriweather', serif;
}

.brown-header-text {
  @apply font-merriweather text-title-brown;
}

.brown-header-text-shadow {
  text-shadow: 0px 0px 6px rgba(133, 119, 119, 0.33);
}

.brown-subheader-text {
  @apply font-merriweather text-title-brown;
}

.brown-subheader-text-shadow {
  text-shadow: 0px 0px 1px rgba(69, 55, 55, 0.42);
}

/* selection color */
::selection {
  background: #69ffd1; /* WebKit/Blink Browsers */
}
::-moz-selection {
  background: #69ffd1; /* Gecko Browsers */
}

/* scrollbar */
body::-webkit-scrollbar {
  background-color: #fff;
  width: 16px;
}

/* background of the scrollbar except button or resizer */
body::-webkit-scrollbar-track {
  @apply bg-red-50;
}

/* scrollbar itself */
body::-webkit-scrollbar-thumb {
  border-radius: 16px;
  border: 4px solid;
  @apply border-red-100 bg-gray-500;
}

body::-webkit-scrollbar-thumb:hover {
  border: 2px solid;
  @apply border-red-100 bg-gray-500;
}
/* set button(top and bottom of the scrollbar) */
body::-webkit-scrollbar-button {
  display: none;
}

